--- a/misc/basiclatex.tex
+++ b/misc/basiclatex.tex
@@ -27,7 +27,7 @@ Before doing anything, try typesetting this TeX document. What that means is, it
 
 Anyway, this is how you type plain text. Nothing fancy, right? There are a few things to note. First, it will only render one space. So if you use     a lot of spaces, most of the spaces will disappear when you typeset. Similarly, if you enter a lot of empty lines between two paragraphs, it will just start a new paragraph without a line between them. (Try it!)
 
-If you want to \textbf{bold} something, you'll write use the \verb|\textbf |command. To \emph{emphasize} something, use the \verb|\emph| command. (There is a \verb|\textit| command to italicize, but if you're trying to emphasize something, use \verb|emph| instead.) To \underline{underline} text, use \verb|\underline|. 
+If you want to \textbf{bold} something, you'll use the \verb|\textbf |command. To \emph{emphasize} something, use the \verb|\emph| command. (There is a \verb|\textit| command to italicize, but if you're trying to emphasize something, use \verb|emph| instead.) To \underline{underline} text, use \verb|\underline|. 
 
 We can break up the document into different sections and subsections with \verb|\section| and \verb|\subsection| commands. They'll automatically be numbered for you unless you put an asterisk in front of them, like \verb|\section|*. We can also title paragraphs with \verb|\paragraph|. For instance, I'll start a new section right now.
 
