--- a/misc/basiclatex.tex
+++ b/misc/basiclatex.tex
@@ -129,7 +129,7 @@ if you want to show a short string of (in)equalities.  To do so, use the form
 		\item Sometimes you'll want really big parentheses. For instance,
 				\[ ( \sum_{i=1}^n i)^2	\]
 			just looks weird. In this case, put \verb|\left| before the left parenthesis 
-			and \verb|right| before the right parenthesis.:
+			and \verb|\right| before the right parenthesis.:
 				\[ \left( \sum_{i=1}^n i \right)^2	\]
 				
 		\item If you want to display a dollar sign or a percentage or some other symbol 
