--- a/misc/basiclatex.tex
+++ b/misc/basiclatex.tex
@@ -12,7 +12,6 @@
 \usepackage{setspace}
 
 
-
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\N}{\mathbb{N}}
@@ -228,9 +227,25 @@ item is reduced:
 \end{enumerate}
 	
 	
-	\section{Other Stuff}
 	
-	Yeah, I'll add some other stuff as need warrants. 
+\section{Quotations}
+
+Use the \verb|quote| environment for shorter quotes (no indent):
+\begin{quote}
+	``The depressing thing about tennis is that no matter how good I get, I'll never be as good as a wall.'' --- Mitch Hedberg
+\end{quote}
+And use the \verb|quotation| environment for longer quotes:
+\begin{quotation}
+	``Dr. Scholl makes foot products, right? And he's a doctor, which means he went to school for a long time. But it doesn't take a lot to figure out that stepping on a cushion would be more comfortable. That fucker wasted lots of time at school. `Cuz I would have bought that shit from a Mr. Scholl.''
+	
+	\hfill --- Mitch Hedberg
+\end{quotation}
+
+	
+	
+\section{Other Stuff}
+	
+Yeah, I'll add some other stuff as need warrants. 
  
 	
 
