--- a/misc/basiclatex.tex
+++ b/misc/basiclatex.tex
@@ -232,7 +232,7 @@ item is reduced:
 
 Use the \verb|quote| environment for shorter quotes (no indent):
 \begin{quote}
-	``The depressing thing about tennis is that no matter how good I get, I'll never be as good as a wall.'' --- Mitch Hedberg
+	``The first principle is that you must not fool yourself and you are the easiest person to fool.'' --- Richard Feynman
 \end{quote}
 And use the \verb|quotation| environment for longer quotes:
 \begin{quotation}
